fix: like button cut off

--- a/blocks/place/__rate/place__rate.css
+++ b/blocks/place/__rate/place__rate.css
@@ -2,11 +2,13 @@
   cursor: pointer;
   transition: opacity .3s ease-in-out;
   background-image: url('../../../images/like-icon.svg');
-  background-size: cover;
-  border: 0;
+  background-size: contain;
   background-color: transparent;
+  background-repeat: no-repeat;
   width: 22px;
   height: 19px;
+  border: 0;
+  padding: 0;
 }
 
 .place__rate:hover {
